# digit-recognizer

./: .gitignore  README.md  cnn.csv  cnn.py  pyproject.toml  requirements.txt
